tests/AST/unknown-prefix.bel
# RUN: %not %belalang build --emit ast %s | %FileCheck %s

|1

# CHECK:      error: unknown prefix
# CHECK-NEXT:  --> {{.*}}/tests/AST/unknown-prefix.bel:3:1
# CHECK-NEXT:   |
# CHECK-NEXT: 3 | |1
# CHECK-NEXT:   | ^ unknown prefix
